packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_default_export_index.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 1574
expression: output
---
==INPUT==


import { component$ } from '@qwik.dev/core';

export default component$(() => {
	return (
		<div onClick$={() => console.log(mongodb)}>
		</div>
	);
});


============================= src/components/mongo/index.tsx ==

import { componentQrl } from "@qwik.dev/core";
import { inlinedQrl } from "@qwik.dev/core";
const mongo_component_div_q_e_click_jncbxvZVtWY = ()=>console.log(mongodb);
const mongo_component_ouWLj4jA2oI = ()=>{
    return <div q-e:click={/*#__PURE__*/ inlinedQrl(mongo_component_div_q_e_click_jncbxvZVtWY, "mongo_component_div_q_e_click_jncbxvZVtWY")}>
		</div>;
};
export default /*#__PURE__*/ componentQrl(/*#__PURE__*/ inlinedQrl(mongo_component_ouWLj4jA2oI, "mongo_component_ouWLj4jA2oI"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/src/components/mongo/index.tsx\"],\"names\":[],\"mappings\":\";;kDAKiB,IAAM,QAAQ,GAAG,CAAC;oCAFT;IACzB,QACE,IAAI,6HAAsC;EAC3C,EAAE;AAEJ;AALA,6BAAe,mGAKZ\"}")
== DIAGNOSTICS ==

[]
