packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_derived_signals_cmp.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 2996
expression: output
---
==INPUT==


import { component$, useStore, mutable } from '@qwik.dev/core';

import {dep} from './file';
import {Cmp} from './cmp';

export const App = component$(() => {
	const signal = useSignal(0);
	const store = useStore({});
	return (
		<Cmp
			staticText="text"
			staticText2={`text`}
			staticNumber={1}
			staticBoolean={true}
			staticExpr={`text${12}`}
			staticExpr2={typeof `text${12}` === 'string' ? 12 : 43}

			signal={signal}
			signalValue={signal.value}
			signalComputedValue={12 + signal.value}

			store={store.address.city.name}
			storeComputed={store.address.city.name ? 'true' : 'false'}

			dep={dep}
			depAccess={dep.thing}
			depComputed={dep.thing + 'stuff'}

			global={globalThing}
			globalAccess={globalThing.thing}
			globalComputed={globalThing.thing + 'stuff'}


			noInline={signal.value()}
			noInline2={signal.value + unknown()}
			noInline3={mutable(signal)}
			noInline4={signal.value + dep}
		/>
	);
});

============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { _wrapProp } from "@qwik.dev/core";
import { _fnSignal } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { _noopQrl } from "@qwik.dev/core";
import { useStore, mutable } from '@qwik.dev/core';
import { dep } from './file';
import { Cmp } from './cmp';
//
const _hf0 = (p0)=>12 + p0.value;
const _hf0_str = "12+p0.value";
const _hf1 = (p0)=>p0.address.city.name;
const _hf1_str = "p0.address.city.name";
const _hf2 = (p0)=>p0.address.city.name ? 'true' : 'false';
const _hf2_str = 'p0.address.city.name?"true":"false"';
const _hf3 = (p0)=>p0.value + unknown();
const _hf3_str = "p0.value+unknown()";
//
const q_App_component_ckEPmXZlub0 = /*#__PURE__*/ _noopQrl("App_component_ckEPmXZlub0");
//
const App_component_ckEPmXZlub0 = ()=>{
    const signal = useSignal(0);
    const store = useStore({});
    return /*#__PURE__*/ _jsxSorted(Cmp, {
        noInline: signal.value(),
        noInline3: mutable(signal),
        noInline4: signal.value + dep
    }, {
        staticText: "text",
        staticText2: `text`,
        staticNumber: 1,
        staticBoolean: true,
        staticExpr: `text${12}`,
        staticExpr2: typeof `text${12}` === 'string' ? 12 : 43,
        signal: signal,
        signalValue: _wrapProp(signal),
        signalComputedValue: _fnSignal(_hf0, [
            signal
        ], _hf0_str),
        store: _fnSignal(_hf1, [
            store
        ], _hf1_str),
        storeComputed: _fnSignal(_hf2, [
            store
        ], _hf2_str),
        dep: dep,
        depAccess: dep.thing,
        depComputed: dep.thing + 'stuff',
        global: globalThing,
        globalAccess: _wrapProp(globalThing, "thing"),
        globalComputed: globalThing.thing + 'stuff',
        noInline2: _fnSignal(_hf3, [
            signal
        ], _hf3_str)
    }, null, 3, "u6_0");
};
q_App_component_ckEPmXZlub0.s(App_component_ckEPmXZlub0);
export const App = /*#__PURE__*/ componentQrl(q_App_component_ckEPmXZlub0);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;AACA,SAAqB,QAAQ,EAAE,OAAO,QAAQ,iBAAiB;AAE/D,SAAQ,GAAG,QAAO,SAAS;AAC3B,SAAQ,GAAG,QAAO,QAAQ;;mBAgBF,KAAK,GAAO,KAAK;;mBAE/B,GAAM,OAAO,CAAC,IAAI,CAAC,IAAI;;mBACf,GAAM,OAAO,CAAC,IAAI,CAAC,IAAI,GAAG,SAAS;;mBAYvC,GAAO,KAAK,GAAG;;;;;kCA7BC;IAC7B,MAAM,SAAS,UAAU;IACzB,MAAM,QAAQ,SAAS,CAAC;IACxB,qBACC,WAAC;QAwBA,UAAU,OAAO,KAAK;QAEtB,WAAW,QAAQ;QACnB,WAAW,OAAO,KAAK,GAAG;;QA1B1B,YAAW;QACX,aAAa,CAAC,IAAI,CAAC;QACnB,cAAc;QACd,eAAe;QACf,YAAY,CAAC,IAAI,EAAE,IAAI;QACvB,aAAa,OAAO,CAAC,IAAI,EAAE,IAAI,KAAK,WAAW,KAAK;QAEpD,QAAQ;QACR,WAAW,YAAE;QACb,mBAAmB;;;QAEnB,KAAK;;;QACL,aAAa;;;QAEb,KAAK;QACL,WAAW,IAAI,KAAK;QACpB,aAAa,IAAI,KAAK,GAAG;QAEzB,QAAQ;QACR,YAAY,YAAE;QACd,gBAAgB,YAAY,KAAK,GAAG;QAIpC,SAAS;;;;AAKZ;;AAlCA,OAAO,MAAM,oBAAM,0CAkChB\"}")
== DIAGNOSTICS ==

[]
