packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_dev_mode.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 2300
expression: output
---
==INPUT==


import { component$, useStore } from '@qwik.dev/core';

export const App = component$(() => {
	return (
		<Cmp>
			<p class="stuff" onClick$={() => console.log('warn')}>Hello Qwik</p>
		</Cmp>
	);
});

============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrlDEV } from "@qwik.dev/core";
const _qrl_App_component_ckEPmXZlub0 = /*#__PURE__*/ qrlDEV(()=>import("./test.tsx_App_component_ckEPmXZlub0"), "App_component_ckEPmXZlub0", {
    file: "/user/qwik/src/test.tsx",
    lo: 88,
    hi: 200,
    displayName: "test.tsx_App_component"
});
export const App = /*#__PURE__*/ componentQrl(_qrl_App_component_ckEPmXZlub0);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;;;AAGA,OAAO,MAAM,oBAAM,6CAMhB\"}")
============================= test.tsx_App_component_ckEPmXZlub0.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
import { qrlDEV } from "@qwik.dev/core";
const _qrl_App_component_Cmp_p_q_e_click_Yl4ybrJWrt4 = /*#__PURE__*/ qrlDEV(()=>import("./test.tsx_App_component_Cmp_p_q_e_click_Yl4ybrJWrt4"), "App_component_Cmp_p_q_e_click_Yl4ybrJWrt4", {
    file: "/user/qwik/src/test.tsx",
    lo: 144,
    hi: 169,
    displayName: "test.tsx_App_component_Cmp_p_q_e_click"
});
export const App_component_ckEPmXZlub0 = ()=>{
    return /*#__PURE__*/ _jsxSorted(Cmp, null, null, /*#__PURE__*/ _jsxSorted("p", null, {
        class: "stuff",
        "q-e:click": _qrl_App_component_Cmp_p_q_e_click_Yl4ybrJWrt4
    }, "Hello Qwik", 3, null, {
        fileName: "test.tsx",
        lineNumber: 7,
        columnNumber: 4
    }), 3, "u6_0", {
        fileName: "test.tsx",
        lineNumber: 6,
        columnNumber: 3
    });
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;;;yCAG8B;IAC7B,qBACC,WAAC,+BACA,WAAC;QAAE,OAAM;QAAQ,WAAQ;OAA6B;;;;;;;;;AAGzD\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_ckEPmXZlub0",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "test.tsx_App_component_ckEPmXZlub0",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    88,
    200
  ]
}
*/
============================= test.tsx_App_component_Cmp_p_q_e_click_Yl4ybrJWrt4.js (ENTRY POINT)==

export const App_component_Cmp_p_q_e_click_Yl4ybrJWrt4 = ()=>console.log('warn');


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"yDAM8B,IAAM,QAAQ,GAAG,CAAC\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_Cmp_p_q_e_click_Yl4ybrJWrt4",
  "entry": null,
  "displayName": "test.tsx_App_component_Cmp_p_q_e_click",
  "hash": "Yl4ybrJWrt4",
  "canonicalFilename": "test.tsx_App_component_Cmp_p_q_e_click_Yl4ybrJWrt4",
  "path": "",
  "extension": "js",
  "parent": "App_component_ckEPmXZlub0",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    144,
    169
  ]
}
*/
== DIAGNOSTICS ==

[]
